2009-10-28 [ticho]	0.25.0cvs5

	* src/feed.c
		Abort feed fetching as soon as possible if app is exiting.

2009-10-28 [colin]	0.25.0cvs4

	* src/strreplace.c
		Use a walking pointer instead of using strncat

2009-10-27 [ticho]	0.25.0cvs3

	* src/feed.c
	* src/strreplace.c
	* src/strreplace.h
		Better stripping of unwanted whitespace (newline, tabs, ...)
		from text during feed parsing. Should fix duplicates in certain feeds.

2009-10-27 [ticho]	0.25.0cvs2

	* src/feed.c
	* src/feed.h
		If user exits application while a feed is being parsed, interrupt
		parsing and allow application to quit immediately. Note: feed download
		can not be interrupted like this.

2009-10-25 [ticho]	0.25.0cvs1

	* src/feed.c
	* src/feed.h
		Do not block UI while parsing a feed.

2008-07-03 [paul]	0.25

	0.25 released

2009-07-03 [paul]	0.24.0cvs6

	* configure.ac
	* po/id.po
		added by MSulchan Darmawan
	* po/es.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/it.po
	* po/ja.po
	* po/ru.po
		updated by Ricardo Mones, Tommi Pirinen, Colin Leroy,
		Pader Rezso, Andrea Spadaccini, kazken3, and
		Aleksei Miheev

2009-04-18 [colin]	0.24.0cvs5

	* Makefile.am
		Fix make dist

2009-04-18 [michael]	0.24.0cvs4

	* src/parsers.c
		fix bug 1900 'Linus' atom feed does not 
		show correcly in RRSyl: missing newlines'
		Patch by Ticho.

2009-03-14 [colin]	0.24.0cvs3

	* src/parsers.c
		Fix little bugs from 0.24.0cvs2

2009-03-12 [colin]	0.24.0cvs2

	* src/feed.c
	* src/parsers.c
	* src/rssyl.c
		Add support for comments in Atom feeds

2009-03-08 [paul]	0.24.0cvs1

	* configure.ac
	* po/ja.po
		add Japanese translation, submitted by kazken3

2008-12-19 [paul]	0.24.0

	0.24 released

2009-03-06 [paul]	0.23.0cvs2

	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/pt_BR.po
		updated by Flammie Pirinen, Colin Leroy, Pader Rezso,
		and Frederico Goncalves Guimaraes

2009-01-11 [paul]	0.23.0cvs1

	* src/rssyl_cb_menu.c
		trim the label but not the entry in the
		Rename dialog

2008-12-19 [paul]	0.23.0

	0.23 released
